# siemens_selection

./: .gitignore  BuildAndRun.sh  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: Helpers.hpp  ex10.cpp  ex10.txt  ex11.cpp  ex3.cpp  ex4.cpp  ex7.sql  helpers.cpp
tests/: unittest.cpp
